--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
-        <div class="fullscreen">
+        <div id="fullscreen" class="fullscreen">
             <app-root></app-root>
         </div>
     </body>
